start creating log and os settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_TOOLCHAIN_FILE "C:/Users/semch/CLionProjects/PulseEngine/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
 set(VCPKG_TARGET_TRIPLET "x64-windows" CACHE STRING "")
+set(Qt6_DIR "C:/Qt/6.10.1/mingw_64/lib/cmake/Qt6")
 
 # Libraries via vcpkg
 find_package(glm CONFIG REQUIRED)
@@ -12,6 +13,7 @@ find_package(Eigen3 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(EnTT CONFIG REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
 # Vulkan SDK manually
 set(Vulkan_INCLUDE_DIR "C:/VulkanSDK/1.4.335.0/Include")
@@ -29,6 +31,10 @@ add_executable(PulseEngine
         EngineCore/main_loop.h
         EngineCore/logginer.cpp
         EngineCore/logginer.h
+        system/SystemInfo.cpp
+        system/SystemInfo.h
+        log/logs.cpp
+        log/logs.h
 )
 
 target_link_libraries(PulseEngine
@@ -39,4 +45,7 @@ target_link_libraries(PulseEngine
         fmt::fmt
         EnTT::EnTT
         Vulkan::Vulkan
+        Qt6::Core
+        Qt6::Gui
+        Qt6::Widgets
 )
